--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,5 +1,6 @@
 // Палитра цветов макета и наборы шрифтов вынесены в переменные в файле variables.scss
-$text-color: #212121;
+// Color
+$primary-text-color: #212121;
 $title-text-color: #757575;
 $accent-color: #2196f3;
 $logo-color: #000000;
@@ -7,3 +8,10 @@ $primary-white-color: #ffffff;
 $footer-fon-color: #2f303a;
 $line-color: #ececec;
 $second-fon-color: #f5f4fa;
+
+// Font
+$main-font: Roboto, sans-serif;
+$logo-font: Raleway, sans-serif;
+
+// transitions
+$transitions: 250ms cubic-bezier(0.4, 0, 0.2, 1);
