--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -21,10 +21,10 @@
 	display: flex;
 	list-style: none;
 	margin: 0;
-  padding: 0;
+	padding: 0;
 
-  &__item:not(:last-child) {
-    margin-right: 50px;
+	&__item:not(:last-child) {
+		margin-right: 50px;
 	}
 }
 
@@ -44,7 +44,14 @@
 	&:focus {
 		color: $accent-color;
 	}
+}
 
+.site-nav-pagination__item {
+	position: relative;
+}
+
+.site-nav-pagination__link--active {
+	color: $accent-color;
 	&::after {
 		position: absolute;
 		content: "";
@@ -59,27 +66,20 @@
 	}
 }
 
-.site-nav-pagination__item {
-	position: relative;
-}
-
-.site-nav-pagination__link--active {
-	color: $accent-color;
-}
-
 .contact-us {
 	display: flex;
 	list-style: none;
 	margin: 0;
 	padding: 0;
-  margin-left: auto;
-  
-  &__item {
-    transition: color 250ms $transition;
+	margin-left: auto;
 
-    &:not(:last-child) {
-      margin-right: 50px;
-    }
+	&__item {
+		transition: color $transitions;
+
+		&:not(:last-child) {
+			margin-right: 50px;
+		}
+	}
 }
 
 .contact-us__link {
@@ -88,20 +88,19 @@
 	align-items: center;
 	padding-top: 32px;
 	padding-bottom: 32px;
-	color: var(--title-text-color);
+	color: $title-text-color;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.1;
 	letter-spacing: 0.02em;
 	text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-  &__link:hover,
-  &__link:focus {
-    color: $accent-color;
-  }
-}
+	transition: color $transitions;
 
+	&:hover,
+	&:focus {
+		color: $accent-color;
+	}
+}
 
 .contact-us__icon--mail {
 	width: 16px;
@@ -116,8 +115,10 @@
 }
 
 .contact-us__item {
-  transition: color $transitions;
-  &:hover, &:focus {
-    fill: $accent-color;
-  }
+	transition: color $transitions;
+
+	&:hover,
+	&:focus {
+		fill: $accent-color;
+	}
 }
