--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,6 +8,10 @@ $primary-white-color: #ffffff;
 $footer-fon-color: #2f303a;
 $line-color: #ececec;
 $second-fon-color: #f5f4fa;
+$second-text-color: rgba(255, 255, 255, 0.6);
+$background-color: rgba(255, 255, 255, 0.1);
+$border-color: rgba(255, 255, 255, 0.3);
+$border-color-shadow: rgba(0, 0, 0, 0.15);
 
 // Font
 $main-font: Roboto, sans-serif;
