--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -30,6 +30,7 @@
 	line-height: 1.18;
 	letter-spacing: 0.03em;
 	color: $accent-color;
+
 	&-accent {
 		color: $primary-white-color;
 		font-family: $logo-font;
@@ -203,7 +204,7 @@
 	padding-top: 18px;
 
 	border-top: 1px solid $background-color;
-	color: rgba(255, 255, 255, 0.4);
+	color: $copyright-color;
 	font-weight: normal;
 	font-size: 12px;
 	line-height: 2px;
