--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,10 +12,17 @@ $second-text-color: rgba(255, 255, 255, 0.6);
 $background-color: rgba(255, 255, 255, 0.1);
 $border-color: rgba(255, 255, 255, 0.3);
 $border-color-shadow: rgba(0, 0, 0, 0.15);
+$copyright-color: rgba(255, 255, 255, 0.4);
+$bg-line-gradient: rgba(47, 48, 58, 0.8);
+$border-bm-color: rgba(23, 25, 46, 0.8);
+$team-box-shadow-1: rgba(0, 0, 0, 0.2);
+$team-box-shadow-2: rgba(0, 0, 0, 0.14);
+$team-box-shadow-3: rgba(0, 0, 0, 0.12);
+$modal-name-border: rgba(33, 33, 33, 0.2);
 
 // Font
-$main-font: Roboto, sans-serif;
-$logo-font: Raleway, sans-serif;
+$main-font: "Roboto, sans-serif";
+$logo-font: "Raleway, sans-serif";
 
 // transitions
 $transitions: 250ms cubic-bezier(0.4, 0, 0.2, 1);
