--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,8 +21,8 @@ $team-box-shadow-3: rgba(0, 0, 0, 0.12);
 $modal-name-border: rgba(33, 33, 33, 0.2);
 
 // Font
-$main-font: "Roboto, sans-serif";
-$logo-font: "Raleway, sans-serif";
+$main-font: Roboto, sans-serif;
+$logo-font: Raleway, sans-serif;
 
 // transitions
 $transitions: 250ms cubic-bezier(0.4, 0, 0.2, 1);
